workaround for broken MediaMetadataRetriever on galaxy note II
* AndroidManifest.xml: bump version, clean up lint complaints

* build/Makefile: add lint
  (tag): new
  (install-pda): new

* build/app.prj (src_dir): handle lint errors

* build.xml: bump to SDK 20, Android 4.1 = android-16

* lint.xml: New file.

* src/org/stephe_leake/android/stephes_music/activity.java:
* res/layout-normal/main.xml:
* res/layout-large-land/main.xml: fix lint complaints

* res/values/strings.xml: delete unused strings, clean up whitespace

* src/org/stephe_leake/android/stephes_music/MetaData.java: New file; workaround for broken MediaMetadataRetriever.

* src/org/stephe_leake/android/stephes_music/preferences.java: support galaxy note II

* src/org/stephe_leake/android/stephes_music/service.java: use MetaData
  replace errorLog with debugLog; can't see system log.

* src/org/stephe_leake/android/stephes_music/utils.java: improve comments